# py-smartreply

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  clone_all_deps.sh  setup.py
src/: main_app.cc  op_extract_feature.cc  op_normalize.cc  op_predict.cc  predictor.cc  py_inference.cc  register_custom_ops.h
src/smartreply/: __init__.py
tests/: fake_model  test_smartreply.py
web-server/: Dockerfile  app.py  requirements.txt
